# week2-Data-work

./: README.md  pyproject.toml
data/processed/: analytics_table.parquet  orders.parquet  orders_clean.parquet  users.parquet
notebooks/: eda.ipynb
reports/: missingness_orders.csv  revenue_by_country.csv
scripts/: run_day1_load.py  run_day2_clean.py  run_day3_build_analytics.py
src/bootcamp_data/: config.py  io.py  joins.py  quality.py  transforms.py
