[project]
name = "week2-data-work"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
  "streamlit",
  "numpy",
  "pandas==2.3.3",
  "pyarrow==22.0.0",
  "plotly==6.5.0",
  "kaleido==1.2.0",
  "jupyterlab==4.5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootcamp_data"]